[package]
name = "jlrs-ledger"
version = "0.1.1"
edition = "2021"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = "A ledger to track Julia data borrowed in Rust "
homepage = "https://github.com/Taaitaaiger/jlrs_ledger"
repository = "https://github.com/Taaitaaiger/jlrs_ledger"
readme = "./README.md"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1"
