[package]
name = "jlrs-ledger"
version = "0.2.0"
edition = "2021"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = "A ledger to track Julia data borrowed in Rust "
homepage = "https://github.com/Taaitaaiger/jlrs_ledger"
repository = "https://github.com/Taaitaaiger/jlrs_ledger"
readme = "./README.md"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1"
rustc-hash = "1"
spin = { version = "0.9", features = ["use_ticket_mutex"]}

[target.'cfg(unix)'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

[profile.bench]
debug = true

[profile.release]
panic = "abort"

[[bench]]
name = "track"
harness = false
