[package]
name = "jlrs-ledger"
version = "0.3.0"
edition = "2021"
authors = ["Thomas van Doornmalen <thomas.vandoornmalen@gmail.com>"]
description = "A ledger to track Julia data borrowed in Rust"
homepage = "https://github.com/Taaitaaiger/jlrs_ledger"
repository = "https://github.com/Taaitaaiger/jlrs_ledger"
readme = "./README.md"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1"
rustc-hash = "2"
spin = "0.9"

[target.'cfg(unix)'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.bench]
debug = true
codegen-units = 1

[profile.release]
codegen-units = 1
panic = "abort"

[[bench]]
name = "track"
harness = false

[[bench]]
name = "contention"
harness = false
